--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@subsquid/graphql-server": "3.2.4",
     "@subsquid/typeorm-migration": "0.1.4",
     "@subsquid/typeorm-store": "0.1.5",
+    "@types/lodash": "^4.14.191",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
+    "lodash": "^4.17.21",
     "pg": "^8.7.3",
     "typeorm": "^0.3.6"
   },
